pw_pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: browser-test-pod
  namespace: jupyterhub
  labels:
    app: browser-test
spec:
  restartPolicy: Never
  containers:
  - name: test-runner
    image: 10.100.135.132:5000/jupyterhub/custom:4.0.3
    imagePullPolicy: IfNotPresent
    command: ["sleep", "3600"]
    securityContext:
      runAsUser: 0
      runAsGroup: 0
    volumeMounts:
    - name: test-scripts
      mountPath: /opt/test-scripts
    - name: dshm
      mountPath: /dev/shm
    resources:
      requests:
        cpu: "2000m"
        memory: "4Gi"
      limits:
        cpu: "4000m"
        memory: "8Gi"
  volumes:
  - name: test-scripts
    configMap:
      name: browser-test-runner
  - name: dshm
    emptyDir:
      medium: Memory
      sizeLimit: 2Gi
